@@ -6,6 +6,9 @@ Remove the assumption that all instances of a given class have the same metaclas
 Fixed the method search so that the GantBuilder object referred to by ant is checked for all closures
 declared in a target.
 
+Correct Execute.shall method so it works on Windows without Cygwin or MSYS.
+
+
 1.3.0 (r9298, tagged as 9302)
 -----------------------------
 
